chore: wrap keyboard shortcuts in container to avoid style collisions and override

--- a/frontend/src/pages/Shortcuts/Shortcuts.styles.scss
+++ b/frontend/src/pages/Shortcuts/Shortcuts.styles.scss
@@ -1,27 +1,29 @@
-.keyboard-shortcuts {
-	display: flex;
-	flex-direction: column;
-	margin-top: 1rem;
-	padding: 1rem;
-	gap: 24px;
-	width: 80%;
-	margin: 0 auto;
-
-	.shortcut-section {
+.shortcuts-page-container {
+	.keyboard-shortcuts {
 		display: flex;
 		flex-direction: column;
-		gap: 12px;
+		margin-top: 1rem;
+		padding: 1rem;
+		gap: 24px;
+		width: 80%;
+		margin: 0 auto;
 
-		.shortcut-section-heading {
-			font-weight: 600;
-			font-size: 22px;
-			line-height: 1.3636363636363635;
-		}
+		.shortcut-section {
+			display: flex;
+			flex-direction: column;
+			gap: 12px;
 
-		tbody {
-			.shortcut-key {
-				font-family: 'Space Mono', monospace;
-				text-transform: uppercase;
+			.shortcut-section-heading {
+				font-weight: 600;
+				font-size: 22px;
+				line-height: 1.3636363636363635;
+			}
+
+			tbody {
+				.shortcut-key {
+					font-family: 'Space Mono', monospace;
+					text-transform: uppercase;
+				}
 			}
 		}
 	}
